// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectableListItem /> render 1`] = `
<TouchableOpacity
  onPress={[Function]}
  ref={null}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <RCTText
    bold={true}
    green={true}
    numberOfLines={1}
    style={
      {
        "paddingVertical": 20,
      }
    }
    testID="Primary"
  >
    France
  </RCTText>
  <Ionicons
    color="#0F853B"
    name="checkmark"
    size={26}
    style={
      {
        "marginTop": 18,
      }
    }
  />
</TouchableOpacity>
`;

exports[`<SelectableListItem /> render if not selected 1`] = `
<TouchableOpacity
  onPress={[Function]}
  ref={null}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <RCTText
    bold={true}
    green={false}
    numberOfLines={1}
    style={
      {
        "paddingVertical": 20,
      }
    }
    testID="Primary"
  >
    France
  </RCTText>
</TouchableOpacity>
`;
